--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -7,7 +7,7 @@
 
     <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Some button help</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tellus dolor, condimentum efficitur arcu sed, feugiat pellentesque lacus. Pellentesque ac ipsum ac mauris cursus volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tellus dolor, condimentum efficitur arcu sed, feugiat pellentesque lacus. Pellentesque ac ipsum ac mauris cursus volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</div>
 {% endblock tab_sidebar %}
 
 
@@ -15,7 +15,7 @@
 
     <h2 class="heading">Button variations</h2>
 
-    <p>
+    <div>
 
         <!-- The normal type of button you should use -->
         {{ html.button({ label: 'Default' }) }}
@@ -40,8 +40,7 @@
         {{
             html.button({
                 label: 'Danger',
-                class: 'btn--danger',
-                type: 'link'
+                class: 'btn--danger'
             })
         }}
 
@@ -72,7 +71,7 @@
         {{
             html.button({
                 label: 'Disabled',
-                class: 'is-disabled'
+                disabled: true
             })
         }}
 
@@ -89,11 +88,11 @@
                 class: 'btn--naked'
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Link buttons</h2>
 
-    <p>
+    <div>
         <!-- The normal type of button you should use -->
         {{
             html.button({
@@ -159,7 +158,7 @@
         {{
             html.button({
                 label: 'Disabled',
-                class: 'is-disabled',
+                disabled: true,
                 type: 'link'
             })
         }}
@@ -171,11 +170,11 @@
                 class: 'btn--naked'
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Outline buttons</h2>
 
-    <p>
+    <div>
         <!-- The normal type of button you should use -->
         {{
             html.button({
@@ -236,7 +235,8 @@
         {{
             html.button({
                 label: 'Disabled',
-                class: 'btn--outline is-disabled'
+                class: 'btn--outline',
+                disabled: true
             })
         }}
 
@@ -253,16 +253,16 @@
                 class: 'btn--outline btn--naked'
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Disabled buttons</h2>
 
-    <p>
+    <div>
         <!-- The normal type of button you should use -->
         {{
             html.button({
                 label: 'Default',
-                class: 'is-disabled'
+                disabled: true
             })
         }}
 
@@ -270,7 +270,8 @@
         {{
             html.button({
                 label: 'Primary',
-                class: 'btn--primary is-disabled'
+                class: 'btn--primary',
+                disabled: true
             })
         }}
 
@@ -278,7 +279,8 @@
         {{
             html.button({
                 label: 'Success',
-                class: 'btn--success is-disabled'
+                class: 'btn--success',
+                disabled: true
             })
         }}
 
@@ -286,7 +288,8 @@
         {{
             html.button({
                 label: 'Danger',
-                class: 'btn--danger is-disabled'
+                class: 'btn--danger',
+                disabled: true
             })
         }}
 
@@ -294,7 +297,8 @@
         {{
             html.button({
                 label: 'Warning',
-                class: 'btn--warning is-disabled'
+                class: 'btn--warning',
+                disabled: true
             })
         }}
 
@@ -302,7 +306,8 @@
         {{
             html.button({
                 label: 'Info',
-                class: 'btn--info is-disabled'
+                class: 'btn--info',
+                disabled: true
             })
         }}
 
@@ -310,20 +315,22 @@
         {{
             html.button({
                 label: 'Inverse',
-                class: 'btn--inverse is-disabled'
+                class: 'btn--inverse',
+                disabled: true
             })
         }}
 
         {{
             html.button({
                 label: 'Naked',
-                class: 'btn--naked is-disabled'
+                class: 'btn--naked',
+                disabled: true
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Button groups</h2>
-    <p>
+    <div>
         <div class="btn__toolbar">
         {{
             html.button_group({
@@ -380,10 +387,10 @@
             })
         }}
         </div>
-    </p>
+    </div>
 
     <h2 class="heading">Labels</h2>
-    <p>
+    <div>
         {{
             html.label({
                 label: 'default'
@@ -448,10 +455,10 @@
                 class: 'label--large'
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Removable labels</h2>
-    <p>
+    <div>
         {{
             html.label({
                 label: 'default',
@@ -526,10 +533,10 @@
                 removable: true
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Badges</h2>
-    <p>
+    <div>
         {{
             html.badge({
                 label: '1'
@@ -565,7 +572,7 @@
                 label: '7', class: 'badge--inverse'
             })
         }}
-    </p>
+    </div>
 
     <h2 class="heading">Status indicators</h2>
     <p>I am online {{ html.status('online') }}</p>
@@ -574,7 +581,7 @@
     <p>I am inactive {{ html.status('inactive') }}</p>
 
     <h2 class="heading">Dropdown/Dropup buttons</h2>
-    <p>
+    <div>
         <div class="btn__toolbar">
         {%
             set example_dropdown = [
@@ -643,11 +650,11 @@
             })
         }}
         </div>
-    </p>
+    </div>
 
 
     <h2 class="heading">Icons, Badges and Buttons (oh my!)</h2>
-    <p>
+    <div>
         <div class="btn__toolbar">
             {{
                 html.button({
@@ -697,21 +704,21 @@
 
             }}
         </div>
-    </p>
+    </div>
 
     <h2 class="heading">All the things!</h2>
-    <p>
+    <div>
     {{
         html.button_dropdown({
             'label': html.icon('folder-close') ~ ' Busy Button ' ~ html.badge({ 'label': '99', 'class': 'badge--primary'}),
             'items': example_dropdown
         })
     }}
-    </p>
+    </div>
 
 
 
-    <p class="columns columns--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et enim sed lorem sollicitudin tristique sed at erat. Sed non nunc at nibh vestibulum dictum. Vestibulum a blandit tellus. In quis felis rhoncus mi imperdiet gravida eget quis augue. Praesent rutrum fringilla nisi, sit amet commodo purus pellentesque eu. Curabitur blandit arcu at rutrum ullamcorper. Maecenas vitae faucibus nunc. Phasellus eu quam aliquet, malesuada odio ut, dapibus lorem. Nulla nec urna rutrum, consequat est sit amet, consequat mauris. Maecenas vel mauris id urna viverra ullamcorper. Etiam nisi nibh, pulvinar vel elementum luctus, dapibus sit amet leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et enim sed lorem sollicitudin tristique sed at erat. Sed non nunc at nibh vestibulum dictum. Vestibulum a blandit tellus. In quis felis rhoncus mi imperdiet gravida eget quis augue. Praesent rutrum fringilla nisi, sit amet commodo purus pellentesque eu. Curabitur blandit arcu at rutrum ullamcorper. Maecenas vitae faucibus nunc. Phasellus eu quam aliquet, malesuada odio ut, dapibus lorem. Nulla nec urna rutrum, consequat est sit amet, consequat mauris. Maecenas vel mauris id urna viverra ullamcorper. Etiam nisi nibh, pulvinar vel elementum luctus, dapibus sit amet leo.</p>
+    <p class="columns columns--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et enim sed lorem sollicitudin tristique sed at erat. Sed non nunc at nibh vestibulum dictum. Vestibulum a blandit tellus. In quis felis rhoncus mi imperdiet gravida eget quis augue. Praesent rutrum fringilla nisi, sit amet commodo purus pellentesque eu. Curabitur blandit arcu at rutrum ullamcorper. Maecenas vitae faucibus nunc. Phasellus eu quam aliquet, malesuada odio ut, dapibus lorem. Nulla nec urna rutrum, consequat est sit amet, consequat mauris. Maecenas vel mauris id urna viverra ullamcorper. Etiam nisi nibh, pulvinar vel elementum luctus, dapibus sit amet leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et enim sed lorem sollicitudin tristique sed at erat. Sed non nunc at nibh vestibulum dictum. Vestibulum a blandit tellus. In quis felis rhoncus mi imperdiet gravida eget quis augue. Praesent rutrum fringilla nisi, sit amet commodo purus pellentesque eu. Curabitur blandit arcu at rutrum ullamcorper. Maecenas vitae faucibus nunc. Phasellus eu quam aliquet, malesuada odio ut, dapibus lorem. Nulla nec urna rutrum, consequat est sit amet, consequat mauris. Maecenas vel mauris id urna viverra ullamcorper. Etiam nisi nibh, pulvinar vel elementum luctus, dapibus sit amet leo.</div>
 
     {{
         html.list({
