--- a/views/lexicon/base.html.twig
+++ b/views/lexicon/base.html.twig
@@ -9,9 +9,9 @@
 
 {%
     set breadcrumbs = [
-        {'label': 'Bread', 'href': '#bread'},
-        {'label': 'Crumb', 'href': '#crumb'},
-        {'label': 'Trail', 'href': '#trail'}
+        {'label': 'Bread', 'href': '/bread'},
+        {'label': 'Crumb', 'href': '/crumb'},
+        {'label': 'Trail', 'href': '/trail'}
     ]
 %}
 
