--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -99,6 +99,7 @@ body {
 	}
 
 	input {
+		background-color: white;
 		color: black;
 	}
 
@@ -269,6 +270,8 @@ body {
 
 .signin__info {
 	display: block;
+	font-size: $font-size-base;
+	line-height: $line-height-base;
 	margin-bottom: 1em;
 	padding: 0 5px;
 }
