Add missing skip link

--- a/views/playground/login/neutron.html.twig
+++ b/views/playground/login/neutron.html.twig
@@ -14,7 +14,7 @@
 
 		<div class="signin signin--recapt t-signin-bg">
 			<div class="signin__inner">
-				<form class="signin__panel signin-form" aria-hidden="false">
+				<form id="signin" class="signin__panel signin-form" aria-hidden="false">
 					<div class="signin__icon t-signin-icon"></div>
 
 					<span class="signin__info" role="alert">Neutron</span>
