Increase the font size of the Table Detail Title

--- a/stylesheets/_component.table-detail.scss
+++ b/stylesheets/_component.table-detail.scss
@@ -47,7 +47,7 @@
 
 .table-detail__title {
     line-height: $modal-title-line-height;
-    font-size: $font-size-large;
+    font-size: $font-size-xlarge;
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
