Increase Modal Title Font Size

--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -107,7 +107,7 @@
 
 // Title text within header
 .modal__title {
-    font-size: $font-size-base;
+    font-size: $font-size-xlarge;
     line-height: $modal-title-line-height;
     margin: 0;
 }
