--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -263,7 +263,7 @@
     .modal__header-detailed {
         flex: 1 1 50px;
         margin-left: 15px;
-        margin-top: 4px;
+        margin-top: 10px;
         min-width: 0;
         padding-left: 45px;
 
@@ -285,6 +285,7 @@
         }
 
         .modal__title {
+            font-size: $font-size-base;
             line-height: 1.2em;
         }
 
